--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.13",
+    "ag-grid-community": "^30.2.0",
+    "ag-grid-react": "^30.2.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
